--- a/app/globals.css
+++ b/app/globals.css
@@ -155,6 +155,7 @@ a:visited {
     display: block;
     overflow-y: auto;
     height: max-content;
+    width: 100vw;
   }
 }
 
